fix video size on tablet portrait

--- a/app/athlete/profile/highlights/styles.less
+++ b/app/athlete/profile/highlights/styles.less
@@ -6,13 +6,12 @@
         display: block;
 
         @media only screen
-        and (min-width: @md-screen-sm) {
+        and (min-width: @md-screen-md) {
             display: inline-block;
         }
 
         .featured-reel-video {
             border: none;
-            width: 100%;
             margin: auto;
 
             @media only screen
